# game-of-life

./: .gitignore  Readme.md  pyproject.toml
core/: logic.py
src/: patterns.py  views.py
src/rplife/: __main__.py  cli.py  grid.py  views.py
